cabal-version:       2.4
name:                ghc-tags
version:             0.1
synopsis:            Utility for generating a list of tags for a project
description:         Utility for generating a list of tags for a project
license:             MPL-2.0
license-file:        LICENSE
author:              Andrzej Rybczak
maintainer:          andrzej@rybczak.net
copyright:           (c) 2020, Andrzej Rybczak
category:            Development
extra-source-files:  CHANGELOG.md
                     README.md
homepage:            https://github.com/arybczak/ghc-tags
bug-reports:         https://github.com/arybczak/ghc-tags/issues
tested-with:         GHC ==8.6.5 || ==8.10.4 || ==9.0.1

source-repository head
  type:     git
  location: https://github.com/arybczak/ghc-tags

executable ghc-tags
    hs-source-dirs:      src
    ghc-options:         -Wall -threaded -rtsopts
    ghc-prof-options:    -fprof-auto

    main-is:             Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules:       GhcTags
                         GhcTags.Ghc
                         GhcTags.Tag
                         GhcTags.CTag
                         GhcTags.CTag.Header
                         GhcTags.CTag.Parser
                         GhcTags.CTag.Formatter
                         GhcTags.CTag.Utils
                         GhcTags.ETag
                         GhcTags.ETag.Parser
                         GhcTags.ETag.Formatter
                         GhcTags.Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:       base             < 5
                       , attoparsec
                       , bytestring
                       , containers
                       , deepseq
                       , directory
                       , filepath
                       , ghc
                       , ghc-boot
                       , ghc-paths
                       , stm
                       , text
                       , threads
                       , time
                       , transformers
                       , vector

    hs-source-dirs:      src

    default-language:    Haskell2010
    default-extensions:  BangPatterns
                       , DataKinds
                       , FlexibleContexts
                       , FlexibleInstances
                       , GADTs
                       , KindSignatures
                       , LambdaCase
                       , MultiWayIf
                       , NamedFieldPuns
                       , OverloadedStrings
                       , RecordWildCards
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TupleSections
