cabal-version:       2.4
name:                ghc-tags
version:             0.1
synopsis:            Utility for generating a list of tags for a project
description:         Utility for generating a list of tags for a project
license:             MPL-2.0
license-file:        LICENSE
author:              Andrzej Rybczak
maintainer:          andrzej@rybczak.net
copyright:           (c) 2020, Andrzej Rybczak
category:            Development
extra-source-files:  CHANGELOG.md
                     README.md
homepage:            https://github.com/arybczak/ghc-tags
bug-reports:         https://github.com/arybczak/ghc-tags/issues
tested-with:         GHC ==8.8.4 || ==8.10.4 || ==9.0.1

source-repository head
  type:     git
  location: https://github.com/arybczak/ghc-tags

common build-stanza
  ghc-options:         -Wall
  ghc-prof-options:    -fprof-auto

  if impl(ghc == 9.0.*)
     build-depends: ghc
                  , ghc-boot
  else
     build-depends: ghc-lib == 9.0.*

  build-depends:       base <5
                     , attoparsec
                     , bytestring
                     , containers
                     , deepseq
                     , directory
                     , filepath
                     , ghc-paths
                     , stm
                     , text
                     , threads
                     , time
                     , vector

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , KindSignatures
                     , LambdaCase
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StrictData
                     , StandaloneDeriving
                     , TupleSections

library
  import: build-stanza

  hs-source-dirs:      src

  exposed-modules:     GhcTags
                       GhcTags.Ghc
                       GhcTags.Tag
                       GhcTags.CTag
                       GhcTags.CTag.Header
                       GhcTags.CTag.Parser
                       GhcTags.CTag.Formatter
                       GhcTags.CTag.Utils
                       GhcTags.ETag
                       GhcTags.ETag.Parser
                       GhcTags.ETag.Formatter
                       GhcTags.Utils

executable ghc-tags
    import: build-stanza

    ghc-options: -threaded -rtsopts

    build-depends: ghc-tags

    hs-source-dirs:      exe
    main-is:             Main.hs
