cabal-version:       2.4
name:                ghc-tags
version:             1.5
synopsis:            Utility for generating ctags and etags with GHC API.
description:         Utility for generating etags (Emacs) and ctags (Vim and other
                     editors) with GHC API for efficient project navigation.
license:             MPL-2.0
license-file:        LICENSE
author:              Andrzej Rybczak
maintainer:          andrzej@rybczak.net
copyright:           (c) 2021, Andrzej Rybczak
category:            Development
extra-source-files:  CHANGELOG.md
                     README.md
homepage:            https://github.com/arybczak/ghc-tags
bug-reports:         https://github.com/arybczak/ghc-tags/issues
tested-with:         GHC ==8.10.7 || ==9.0.2 || ==9.2.2

source-repository head
  type:     git
  location: https://github.com/arybczak/ghc-tags

flag ghc-lib
  default: False
  manual:  True
  description: Use ghc-lib even when compiling with compatible GHC version.

executable ghc-tags
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-A4m

  if !flag(ghc-lib) && impl(ghc == 9.2.*)
     build-depends:    ghc, ghc-boot
  else
     build-depends:    ghc-lib == 9.2.*

  build-depends:       base >=4.14 && <4.17
                     , aeson >= 2.0.0.0
                     , async
                     , attoparsec
                     , bytestring
                     , containers
                     , deepseq
                     , directory
                     , filepath
                     , ghc-paths
                     , stm
                     , optparse-applicative
                     , process
                     , temporary
                     , text
                     , time
                     , vector
                     , yaml

  hs-source-dirs:      src

  main-is:             Main.hs

  other-modules:       GhcTags
                       GhcTags.Config.Args
                       GhcTags.Config.Project
                       GhcTags.Ghc
                       GhcTags.GhcCompat
                       GhcTags.Tag
                       GhcTags.CTag
                       GhcTags.CTag.Header
                       GhcTags.CTag.Parser
                       GhcTags.CTag.Formatter
                       GhcTags.CTag.Utils
                       GhcTags.ETag
                       GhcTags.ETag.Parser
                       GhcTags.ETag.Formatter
                       GhcTags.Utils
                       Paths_ghc_tags

  autogen-modules:     Paths_ghc_tags

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , KindSignatures
                     , LambdaCase
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StrictData
                     , StandaloneDeriving
                     , TupleSections
